--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,21 @@
-# Compiled class file
+# --- File compilati Java (non servono online) ---
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# --- Cartelle di build (create automaticamente) ---
+target/
+build/
+bin/
+
+# --- File specifici degli IDE (Eclipse, IntelliJ, VS Code) ---
+.idea/
+*.iml
+.vscode/
+.settings/
+.classpath
+.project
+
+# --- File di sistema (Windows/Mac) ---
+.DS_Store
+Thumbs.db
